# Quantum-Flow

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
bridge/: quantumflow_bridge.cpp  quantumflow_uds_bridge_capi.c  shared_memory.hpp
common/: latency_snapshot.hpp  market_data_packet.hpp  price_converter.hpp  signal_types.hpp
graphics/include/gpu/: vertex_manager.h
graphics/include/math/: simd_math.h
graphics/include/memory/: allocator.h
graphics/include/profiler/: profiler.h
graphics/include/render/: pipeline.h
graphics/src/: pipeline.cpp  profiler.cpp  simd_math.cpp  vertex_manager.cpp
graphics/tests/: benchmark.cpp  test_engine.cpp
orderbook/include/LOB/: SlabPool.h
orderbook/test/: LOBTest.cpp
pipeline/: requirements.txt
pipeline/bench/: bridge_sink_bench.py
pipeline/src/: app.py  normalizer.py
pipeline/src/sinks/: bridge.py
strategies/: strategy_base.cpp  strategy_base.hpp  strategy_engine.cpp  strategy_engine.hpp
strategies/crypto/: funding_arbitrage.hpp  momentum.hpp
strategies/equities/: pairs_trading.hpp
strategies/microstructure/: liquidity_detector.hpp  market_maker.hpp  order_book_imbalance.hpp  vwap_executor.hpp
tests/: test_price_converter.cpp  test_shared_memory.cpp  test_strategies.cpp
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: ConnectionStatus.tsx  LatencyPanel.tsx  OrderBookPanel.tsx  StrategyPanel.tsx  TradeFlowPanel.tsx
web/src/hooks/: useQuantumFlowWs.ts
web/src/lib/: format.ts
web/src/types/: protocol.ts
ws/: json_serializer.cpp  json_serializer.hpp  ws_server.cpp  ws_server.hpp
